Fixed vertical alignment
The needed property is "middle".

--- a/style/20221120.css
+++ b/style/20221120.css
@@ -77,7 +77,7 @@ a.social {
 	height: 41px;
 	margin: 5px 0;
 	padding: 0 50px;
-	vertical-align: center;
+	vertical-align: middle;
 	line-height: 41px;
 	background: var(--background) no-repeat left;
 }
